# meta data
[metadata]
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    ensure==1.0.2
    py-youtube==1.1.7
python_requires = >=3.8

[options.packages.find]
testing =
    pytest>=7.1.3
    mypy>=0.971
    flake8>=5.0.4   #code format checking
    tox>=3.25.1

[options.package_data]
renderer-pypi = py.typed

[flake8]
max-line-length = 160
exclude = __init__.py
